Added Font Awesome

--- a/index.html
+++ b/index.html
@@ -25,21 +25,22 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/8d17ff4027.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    <script
-      src="https://kit.fontawesome.com/3e6e2eaa74.js"
-      crossorigin="anonymous"
-    ></script>
     <link rel="stylesheet" href="/css/styles.css" />
     <title>Homepage</title>
   </head>
   <body>
     <h1>Hey you</h1>
     <p>I'm a paragraph</p>
+    <i class="fa-brands fa-linkedin-in"></i>
   </body>
 </html>
