--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <title>Homepage</title>
   </head>
   <body>
-    <h1>Hey you</h1>
-    <p>I'm a paragraph</p>
-    <i class="fa-brands fa-linkedin-in"></i>
+    <div class="hero">
+      <img src="/images/logo.png" alt="" />
+    </div>
   </body>
 </html>
