Added more html and css

--- a/index.html
+++ b/index.html
@@ -42,5 +42,25 @@
     <div class="hero">
       <img src="/images/logo.png" alt="" />
     </div>
+    <small class="portfolio-tab">Portfolio</small>
+    <div class="container mt-5">
+      <div class="row border">
+        <div class="col-6">
+          <h2 class="mb-4">Project 01</h2>
+          <p class="mb-5 text-muted">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor.
+          </p>
+          <a href="#" class="btn btn-branding-outline mb-5"
+            >View detail project</a
+          >
+        </div>
+        <div class="col-6">
+          <img src="/images/placeholder.png" class="img-fluid" alt="" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
