Finished building homepage using html elements, css styling and Bootstrap utility classes

--- a/index.html
+++ b/index.html
@@ -44,21 +44,88 @@
     </div>
     <small class="portfolio-tab">Portfolio</small>
     <div class="container mt-5">
-      <div class="row border">
-        <div class="col-6">
-          <h2 class="mb-4">Project 01</h2>
-          <p class="mb-5 text-muted">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor.
-          </p>
-          <a href="#" class="btn btn-branding-outline mb-5"
-            >View detail project</a
-          >
+      <div class="row mb-5">
+        <div class="col-md-6">
+          <div class="project-wrapper">
+            <h2 class="mb-4">Project 01</h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.
+            </p>
+            <a href="#" class="btn btn-branding-outline mb-5"
+              >View detail project</a
+            >
+          </div>
         </div>
-        <div class="col-6">
-          <img src="/images/placeholder.png" class="img-fluid" alt="" />
+        <div class="col-md-6">
+          <div class="project-wrapper">
+            <img src="/images/placeholder.png" class="img-fluid" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col-md-6">
+          <div class="project-wrapper">
+            <h2 class="mb-4">Project 02</h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.
+            </p>
+            <a href="#" class="btn btn-branding-outline mb-5"
+              >View detail project</a
+            >
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="project-wrapper">
+            <img src="/images/placeholder.png" class="img-fluid" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col-md-6">
+          <div class="project-wrapper">
+            <h2 class="mb-4">Project 03</h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.
+            </p>
+            <a href="#" class="btn btn-branding-outline mb-5"
+              >View detail project</a
+            >
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="project-wrapper">
+            <img src="/images/placeholder.png" class="img-fluid" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <small class="information-tab">Information</small>
+    <div class="container mt-5">
+      <div class="row mb-5">
+        <div class="col-md-6">
+          <div class="project-wrapper">
+            <h2 class="mt-5 mb-4">Contact</h2>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="project-wrapper mt-5">
+            <div>hannah.v.deakin@gmail.com</div>
+            <div class="mb-3">+44 (0) 7742 611338</div>
+            <span>
+              <i class="fa-brands fa-linkedin"></i>
+              <i class="fa-brands fa-instagram-square"></i>
+              <i class="fa-brands fa-facebook-square"></i>
+            </span>
+          </div>
         </div>
       </div>
     </div>
