Added html to info page, more css styling and bootstrap utility classes, and added a navbar to both pages

--- a/info.html
+++ b/info.html
@@ -36,11 +36,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Homepage</title>
+    <title>Info</title>
   </head>
   <body>
     <nav
-      class="navbar navbar-expand-lg navbar-light"
+      class="navbar sticky-top navbar-expand-lg navbar-light"
       style="background-color: #f1f1f1"
     >
       <div class="container-fluid">
@@ -58,10 +58,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/info.html">Info</a>
+              <a class="nav-link active" aria-current="page" href="/info.html"
+                >Info</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact-section">Contact</a>
@@ -73,79 +75,98 @@
     <div class="hero">
       <img src="/images/max-logo.png" alt="" />
     </div>
-    <small class="portfolio-tab">Portfolio</small>
+    <small class="information-tab">Information</small>
     <div class="container mt-5">
       <div class="row mb-5">
         <div class="col-md-6">
+          <div class="project-wrapper"></div>
+        </div>
+        <div class="col-md-6">
           <div class="project-wrapper">
-            <h2 class="mb-4">Project 01</h2>
-            <p class="mb-5 text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.
+            <h2 class="mb-4">Introduction</h2>
+            <br />
+            <p>
+              I’m Hannah, it’s nice to meet you. I’m a front-end developer,
+              senior copywriter and sub-editor, based in London.
             </p>
-            <a href="#" class="btn btn-branding-outline mb-5"
-              >View detail project</a
-            >
+          </div>
+        </div>
+      </div>
+
+      <div class="row mb-5">
+        <div class="col-md-6">
+          <div class="project-wrapper"></div>
+        </div>
+        <div class="col-md-6">
+          <div class="project-wrapper">
+            <hr class="mb-4" />
+          </div>
+        </div>
+      </div>
+
+      <div class="row mb-5">
+        <div class="col-md-6">
+          <div class="project-wrapper">
+            <h2 class="mb-4">Experience</h2>
           </div>
         </div>
         <div class="col-md-6">
           <div class="project-wrapper">
-            <img src="/images/weather-app.png" class="img-fluid" alt="" />
+            <p class="mb-5">
+              Senior Copywriter, Selfridges, London, UK,<br />April
+              2021–Present<br /><br />
+              Copywriter, Selfridges, London, UK, <br />Oct 2019–April 2021<br /><br />Junior
+              Copywriter, Selfridges, London, UK,<br />Oct 2018–Nov 2019<br /><br />Freelance
+              Travel Writer, SUITCASE Magazine, London, UK,<br />Oct 2019<br /><br />
+              Contributing Writer, Coeval Magazine, London, UK,<br />Sept
+              2018<br /><br />
+              Freelance Content Writer, Everpress, London, UK,<br />Aug 2018<br /><br />Fashion
+              Journalism and Communications Intern, Fleet Ilya, London, UK,<br />Sept
+              2016–Dec 2016
+            </p>
           </div>
         </div>
       </div>
       <div class="row mb-5">
         <div class="col-md-6">
           <div class="project-wrapper">
-            <h2 class="mb-4">Project 02</h2>
-            <p class="mb-5 text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.
-            </p>
-            <a href="#" class="btn btn-branding-outline mb-5"
-              >View detail project</a
-            >
+            <h2 class="mb-4">Education</h2>
           </div>
         </div>
         <div class="col-md-6">
           <div class="project-wrapper">
-            <img src="/images/placeholder.png" class="img-fluid" alt="" />
+            <p>
+              2:1, BA (Hons) Illustration,<br />University of Brighton,
+              Brighton, UK<br /><br />
+              Merit, UAL Drawing Certificate, Drawing, Painting & Mixed
+              Media,<br />
+              University of the Arts London, London,<br /><br />UK Merit, UALAB
+              Diploma in Foundation Studies (Art and Design),<br />University of
+              the Arts London, London, UK
+            </p>
           </div>
         </div>
       </div>
+
       <div class="row mb-5">
         <div class="col-md-6">
-          <div class="project-wrapper">
-            <h2 class="mb-4">Project 03</h2>
-            <p class="mb-5 text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.
-            </p>
-            <a href="#" class="btn btn-branding-outline mb-5"
-              >View detail project</a
-            >
-          </div>
+          <div class="project-wrapper"></div>
         </div>
         <div class="col-md-6">
           <div class="project-wrapper">
-            <img src="/images/placeholder.png" class="img-fluid" alt="" />
+            <hr class="mb-4" />
           </div>
         </div>
       </div>
+
       <div class="row mb-5">
         <div class="col-md-6">
-          <div class="project-wrapper">
-            <h2 class="mt-5 mb-4" id="contact-section">Contact</h2>
-          </div>
+          <div class="project-wrapper"></div>
         </div>
         <div class="col-md-6">
-          <div class="project-wrapper mt-5">
+          <div class="project-wrapper">
+            <h2 class="mb-4" id="contact-section">Get in touch</h2>
+            <br />
             <div>
               <a class="email-link" href="mailto:hannah.v.deakin@gmail.com"
                 >hannah.v.deakin@gmail.com</a
