--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
         <div class="col-md-6">
           <div class="project-wrapper">
-            <img src="/images/placeholder.png" class="img-fluid" alt="" />
+            <img src="/images/foraging-website.png" class="img-fluid" alt="" />
           </div>
         </div>
       </div>
