--- a/info.html
+++ b/info.html
@@ -86,8 +86,13 @@
             <h2 class="mb-4">Introduction</h2>
             <br />
             <p>
-              I’m Hannah, it’s nice to meet you. I’m a front-end developer,
-              senior copywriter and sub-editor, based in London.
+              Hello! My name is Hannah and I'm a London-based senior copywriter,
+              sub-editor and creative with a passion for front-end web
+              development. I have proven experience in omnichannel content
+              writing, strategy, and SEO copywriting, as well as a strong
+              passion for environmental sustainability and social justice. In my
+              spare time, I love to travel the world and experience all the
+              culture on offer.
             </p>
           </div>
         </div>
@@ -112,18 +117,26 @@
         </div>
         <div class="col-md-6">
           <div class="project-wrapper">
-            <p class="mb-5">
-              Senior Copywriter, Selfridges, London, UK,<br />April
-              2021–Present<br /><br />
-              Copywriter, Selfridges, London, UK, <br />Oct 2019–April 2021<br /><br />Junior
-              Copywriter, Selfridges, London, UK,<br />Oct 2018–Nov 2019<br /><br />Freelance
-              Travel Writer, SUITCASE Magazine, London, UK,<br />Oct 2019<br /><br />
-              Contributing Writer, Coeval Magazine, London, UK,<br />Sept
-              2018<br /><br />
-              Freelance Content Writer, Everpress, London, UK,<br />Aug 2018<br /><br />Fashion
-              Journalism and Communications Intern, Fleet Ilya, London, UK,<br />Sept
-              2016–Dec 2016
-            </p>
+            <h4>Senior Copywriter, Selfridges</h4>
+            <p>London, UK<br />April 2021–Present</p>
+            <br />
+            <h4>Digital Copywriter, Selfridges</h4>
+            <p>London, UK<br />Oct 2019–April 2021</p>
+            <br />
+            <h4>Junior Copywriter, Selfridges</h4>
+            <p>London, UK<br />Oct 2018–Nov 2019</p>
+            <br />
+            <h4>Freelance Travel Writer, SUITCASE Magazine</h4>
+            <p>London, UK<br />Oct 2019</p>
+            <br />
+            <h4>Contributing Writer, Coeval Magazine</h4>
+            <p>London, UK<br />Sept 2018</p>
+            <br />
+            <h4>Freelance Content Writer, Everpress</h4>
+            <p>London, UK<br />Aug 2018</p>
+            <br />
+            <h4>Fashion Journalism and Communications Intern, Fleet Ilya</h4>
+            <p class="mb-5">London, UK<br />Sept 2016–Dec 2016</p>
           </div>
         </div>
       </div>
@@ -135,14 +148,47 @@
         </div>
         <div class="col-md-6">
           <div class="project-wrapper">
+            <h4>BA (Hons) Illustration, 2:1</h4>
+            <p>University of Brighton, Brighton, UK</p>
+            <br />
+            <h4>
+              UAL Drawing Certificate, Drawing, Painting & Mixed Media, Merit
+            </h4>
+            <p>University of the Arts London, London, UK</p>
+            <br />
+            <h4>UALAB Diploma in Foundation Studies (Art and Design) Merit</h4>
+            <p class="mb-5">University of the Arts London, London, UK</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row mb-5">
+        <div class="col-md-6">
+          <div class="project-wrapper">
+            <h2 class="mb-4">Certifications</h2>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="project-wrapper">
+            <h4>SheCodes Basics</h4>
+            <p>HTML, CSS, JavaScript, VS Editor</p>
+            <br />
+            <h4>SheCodes Plus</h4>
             <p>
-              2:1, BA (Hons) Illustration,<br />University of Brighton,
-              Brighton, UK<br /><br />
-              Merit, UAL Drawing Certificate, Drawing, Painting & Mixed
-              Media,<br />
-              University of the Arts London, London,<br /><br />UK Merit, UALAB
-              Diploma in Foundation Studies (Art and Design),<br />University of
-              the Arts London, London, UK
+              HTML, CSS, JavaScript, VS Editor, API, Git/Github, Bootstrap,
+              Hosting
+            </p>
+            <br />
+            <h4>SheCodes Responsive</h4>
+            <p>
+              HTML, CSS, VS Editor, Git/Github, Bootstrap, Hosting, Flexbox,
+              SEO, Responsive
+            </p>
+            <br />
+            <h4>SheCodes Pro (enrolled)</h4>
+            <p>
+              HTML, CSS, Javascript, VS Editor, API, Git/Github, Bootstrap,
+              Hosting, React
             </p>
           </div>
         </div>
