Changed the project images, added some styling to the buttons and changed the hero logo

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
     </nav>
     <div class="hero">
-      <img src="/images/max-logo.png" alt="" />
+      <img src="/images/max-logo-white.png" alt="" />
     </div>
     <small class="portfolio-tab">Portfolio</small>
     <div class="container mt-5">
@@ -92,7 +92,7 @@
         </div>
         <div class="col-md-6">
           <div class="project-wrapper">
-            <img src="/images/weather-app.png" class="img-fluid" alt="" />
+            <img src="/images/weather-img.png" class="img-fluid" alt="" />
           </div>
         </div>
       </div>
@@ -113,7 +113,7 @@
         </div>
         <div class="col-md-6">
           <div class="project-wrapper">
-            <img src="/images/foraging-website.png" class="img-fluid" alt="" />
+            <img src="/images/foraging-img.png" class="img-fluid" alt="" />
           </div>
         </div>
       </div>
@@ -134,7 +134,7 @@
         </div>
         <div class="col-md-6">
           <div class="project-wrapper">
-            <img src="/images/placeholder.png" class="img-fluid" alt="" />
+            <img src="/images/placeholder-img.png" class="img-fluid" alt="" />
           </div>
         </div>
       </div>
