--- a/info.html
+++ b/info.html
@@ -73,7 +73,7 @@
       </div>
     </nav>
     <div class="hero">
-      <img src="/images/max-logo.png" alt="" />
+      <img src="/images/max-logo-white.png" alt="" />
     </div>
     <small class="information-tab">Information</small>
     <div class="container mt-5">
@@ -85,14 +85,11 @@
           <div class="project-wrapper">
             <h2 class="mb-4">Introduction</h2>
             <br />
-            <p>
-              Hello! My name is Hannah and I'm a London-based senior copywriter,
-              sub-editor and creative with a passion for front-end web
-              development. I have proven experience in omnichannel content
-              writing, strategy, and SEO copywriting, as well as a strong
-              passion for environmental sustainability and social justice. In my
-              spare time, I love to travel the world and experience all the
-              culture on offer.
+            <p class="text-muted">
+              My name is Hannah and I'm a senior copywriter, sub-editor and
+              trained creative based in London, UK. I have proven experience in
+              omnichannel content writing, strategy, and SEO copywriting, as
+              well as a strong passion for front-end web development and design.
             </p>
           </div>
         </div>
@@ -112,52 +109,90 @@
       <div class="row mb-5">
         <div class="col-md-6">
           <div class="project-wrapper">
-            <h2 class="mb-4">Experience</h2>
+            <h2 class="mb-5">Experience</h2>
           </div>
         </div>
         <div class="col-md-6">
           <div class="project-wrapper">
-            <h4>Senior Copywriter, Selfridges</h4>
-            <p>London, UK<br />April 2021–Present</p>
+            <h4>
+              Senior Copywriter, <br />
+              <a class="cv-link" href="https://www.selfridges.com/GB/en/"
+                >Selfridges</a
+              >
+            </h4>
+            <p class="text-muted">London, UK <br />April 2021–Present</p>
             <br />
-            <h4>Digital Copywriter, Selfridges</h4>
-            <p>London, UK<br />Oct 2019–April 2021</p>
+            <h4>
+              Digital Copywriter, <br />
+              <a class="cv-link" href="https://www.selfridges.com/GB/en/"
+                >Selfridges</a
+              >
+            </h4>
+            <p class="text-muted">London, UK<br />Oct 2019–April 2021</p>
             <br />
-            <h4>Junior Copywriter, Selfridges</h4>
-            <p>London, UK<br />Oct 2018–Nov 2019</p>
+            <h4>
+              Junior Copywriter, <br />
+              <a class="cv-link" href="https://www.selfridges.com/GB/en/"
+                >Selfridges</a
+              >
+            </h4>
+            <p class="text-muted">London, UK<br />Oct 2018–Nov 2019</p>
             <br />
-            <h4>Freelance Travel Writer, SUITCASE Magazine</h4>
-            <p>London, UK<br />Oct 2019</p>
+            <h4>
+              Travel Writer, <br />
+              <a class="cv-link" href="https://suitcasemag.com/"
+                >SUITCASE Magazine</a
+              >
+            </h4>
+            <p class="text-muted">London, UK<br />Oct 2019</p>
             <br />
-            <h4>Contributing Writer, Coeval Magazine</h4>
-            <p>London, UK<br />Sept 2018</p>
+            <h4>
+              Contributing Writer, <br />
+              <a class="cv-link" href="https://www.coeval-magazine.com/"
+                >Coeval Magazine</a
+              >
+            </h4>
+            <p class="text-muted">London, UK<br />Sept 2018</p>
             <br />
-            <h4>Freelance Content Writer, Everpress</h4>
-            <p>London, UK<br />Aug 2018</p>
+            <h4>
+              Content Writer, <br />
+              <a class="cv-link" href="https://everpress.com/">Everpress</a>
+            </h4>
+            <p class="text-muted">London, UK<br />Aug 2018</p>
             <br />
-            <h4>Fashion Journalism and Communications Intern, Fleet Ilya</h4>
-            <p class="mb-5">London, UK<br />Sept 2016–Dec 2016</p>
+            <h4>
+              Fashion Journalism Intern, <br />
+              <a class="cv-link" href="https://www.fleetilya.com/"
+                >Fleet Ilya</a
+              >
+            </h4>
+            <p class="text-muted mb-5">London, UK<br />Sept 2016–Dec 2016</p>
           </div>
         </div>
       </div>
       <div class="row mb-5">
         <div class="col-md-6">
           <div class="project-wrapper">
-            <h2 class="mb-4">Education</h2>
+            <h2 class="mb-5">Education</h2>
           </div>
         </div>
         <div class="col-md-6">
           <div class="project-wrapper">
-            <h4>BA (Hons) Illustration, 2:1</h4>
-            <p>University of Brighton, Brighton, UK</p>
+            <h4>BA (Hons) Illustration, <br />2:1</h4>
+            <p class="text-muted">University of Brighton, Brighton, UK</p>
             <br />
             <h4>
-              UAL Drawing Certificate, Drawing, Painting & Mixed Media, Merit
+              UAL Drawing Certificate, Drawing, Painting & Mixed Media,
+              <br />Merit
             </h4>
-            <p>University of the Arts London, London, UK</p>
+            <p class="text-muted">University of the Arts London, London, UK</p>
             <br />
-            <h4>UALAB Diploma in Foundation Studies (Art and Design) Merit</h4>
-            <p class="mb-5">University of the Arts London, London, UK</p>
+            <h4>
+              UALAB Diploma in Foundation Studies (Art and Design), <br />Merit
+            </h4>
+            <p class="text-muted mb-5">
+              University of the Arts London, London, UK
+            </p>
           </div>
         </div>
       </div>
@@ -165,28 +200,28 @@
       <div class="row mb-5">
         <div class="col-md-6">
           <div class="project-wrapper">
-            <h2 class="mb-4">Certifications</h2>
+            <h2 class="mb-5">Certifications</h2>
           </div>
         </div>
         <div class="col-md-6">
           <div class="project-wrapper">
             <h4>SheCodes Basics</h4>
-            <p>HTML, CSS, JavaScript, VS Editor</p>
+            <p class="text-muted">HTML, CSS, JavaScript, VS Editor</p>
             <br />
             <h4>SheCodes Plus</h4>
-            <p>
+            <p class="text-muted">
               HTML, CSS, JavaScript, VS Editor, API, Git/Github, Bootstrap,
               Hosting
             </p>
             <br />
             <h4>SheCodes Responsive</h4>
-            <p>
+            <p class="text-muted">
               HTML, CSS, VS Editor, Git/Github, Bootstrap, Hosting, Flexbox,
               SEO, Responsive
             </p>
             <br />
             <h4>SheCodes Pro (enrolled)</h4>
-            <p>
+            <p class="text-muted">
               HTML, CSS, Javascript, VS Editor, API, Git/Github, Bootstrap,
               Hosting, React
             </p>
