Updated logo size

--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.
             </p>
-            <a href="#" class="btn btn-branding-outline mb-5"
-              >View detail project</a
+            <a
+              href="https://www.shecodes.io/workshops/shecodes-plus-28010738-c351-4a11-926a-2b99dad862d0/projects/699999"
+              class="btn btn-branding-outline mb-5"
+              >Check it out</a
             >
           </div>
         </div>
@@ -106,8 +108,10 @@
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.
             </p>
-            <a href="#" class="btn btn-branding-outline mb-5"
-              >View detail project</a
+            <a
+              href="https://www.shecodes.io/workshops/shecodes-basics-6d9ccdc4-eeda-4d48-ba36-3d0d14341104/projects/624553"
+              class="btn btn-branding-outline mb-5"
+              >Check it out</a
             >
           </div>
         </div>
@@ -127,9 +131,7 @@
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.
             </p>
-            <a href="#" class="btn btn-branding-outline mb-5"
-              >View detail project</a
-            >
+            <a href="#" class="btn btn-branding-outline mb-5">Check it out</a>
           </div>
         </div>
         <div class="col-md-6">
