Added target _blank to links

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             </p>
             <a
               href="https://www.shecodes.io/workshops/shecodes-plus-28010738-c351-4a11-926a-2b99dad862d0/projects/699999"
+              target="_blank"
               class="btn btn-branding-outline mb-5"
               >Check it out</a
             >
@@ -110,6 +111,7 @@
             </p>
             <a
               href="https://www.shecodes.io/workshops/shecodes-basics-6d9ccdc4-eeda-4d48-ba36-3d0d14341104/projects/624553"
+              target="_blank"
               class="btn btn-branding-outline mb-5"
               >Check it out</a
             >
@@ -131,7 +133,9 @@
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.
             </p>
-            <a href="#" class="btn btn-branding-outline mb-5">Check it out</a>
+            <a href="#" target="_blank" class="btn btn-branding-outline mb-5"
+              >Check it out</a
+            >
           </div>
         </div>
         <div class="col-md-6">
