Cleaned up HTML and CSS, replaced Latin text and added final project content

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       crossorigin="anonymous"
     ></script>
     <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script
       src="https://kit.fontawesome.com/8d17ff4027.js"
       crossorigin="anonymous"
     ></script>
@@ -41,7 +46,7 @@
   <body>
     <nav
       class="navbar navbar-expand-lg navbar-light"
-      style="background-color: #f1f1f1"
+      style="background-color: #ff9eea"
     >
       <div class="container-fluid">
         <button
@@ -70,90 +75,106 @@
         </div>
       </div>
     </nav>
+
     <div class="hero">
       <img src="/images/max-logo-white.png" alt="" />
     </div>
-    <small class="portfolio-tab">Portfolio</small>
+    <small class="tab">Portfolio</small>
     <div class="container mt-5">
       <div class="row mb-5">
         <div class="col-md-6">
-          <div class="project-wrapper">
-            <h2 class="mb-4">Project 01</h2>
+          <div class="content-wrapper">
+            <h2 class="mb-4">Project 01 |<br />Weather App</h2>
             <p class="mb-5 text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.
+              In my latest project, I build my own weather application using
+              HTML, CSS and JS. In my project, I included a search engine, API
+              integration, the wind speed, a weather description, a weather icon
+              are mandatory, and forecast and unit conversions.
             </p>
             <a
               href="https://www.shecodes.io/workshops/shecodes-plus-28010738-c351-4a11-926a-2b99dad862d0/projects/699999"
               target="_blank"
-              class="btn btn-branding-outline mb-5"
+              class="btn btn-branding mb-5"
               >Check it out</a
             >
           </div>
         </div>
         <div class="col-md-6">
-          <div class="project-wrapper">
-            <img src="/images/weather-img.png" class="img-fluid" alt="" />
+          <div class="content-wrapper">
+            <img
+              src="/images/weather-img.png"
+              class="project-image img-fluid"
+              alt=""
+            />
           </div>
         </div>
       </div>
       <div class="row mb-5">
         <div class="col-md-6">
-          <div class="project-wrapper">
-            <h2 class="mb-4">Project 02</h2>
+          <div class="content-wrapper">
+            <h2 class="mb-4">Project 02 |<br />Foraging Landing Page</h2>
             <p class="mb-5 text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.
+              In this project, I created a landing page about a personal passion
+              of mine: foraging. To demonstrate my coding skills, in my webpage
+              I made sure to include a series of HTML element tags, CSS
+              properties and JS functionalities.
             </p>
             <a
               href="https://www.shecodes.io/workshops/shecodes-basics-6d9ccdc4-eeda-4d48-ba36-3d0d14341104/projects/624553"
               target="_blank"
-              class="btn btn-branding-outline mb-5"
+              class="btn btn-branding mb-5"
               >Check it out</a
             >
           </div>
         </div>
         <div class="col-md-6">
-          <div class="project-wrapper">
-            <img src="/images/foraging-img.png" class="img-fluid" alt="" />
+          <div class="content-wrapper">
+            <img
+              src="/images/foraging-img.png"
+              class="project-image img-fluid"
+              alt=""
+            />
           </div>
         </div>
       </div>
       <div class="row mb-5">
         <div class="col-md-6">
-          <div class="project-wrapper">
-            <h2 class="mb-4">Project 03</h2>
+          <div class="content-wrapper">
+            <h2 class="mb-4">Project 03 |<br />Travel Story</h2>
             <p class="mb-5 text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.
+              In my third project, I wrote a creative piece of content
+              describing my travel experience in Northern Laos Province. The aim
+              of this project was to tell a story and pursuade SUITCASE Magazine
+              readers to venture to Laos for their own adventures.
             </p>
-            <a href="#" target="_blank" class="btn btn-branding-outline mb-5"
+            <a
+              href="https://suitcasemag.com/articles/wilderness-whisky-meeting-northern-laos-khmu-people"
+              target="_blank"
+              class="btn btn-branding mb-5"
               >Check it out</a
             >
           </div>
         </div>
         <div class="col-md-6">
-          <div class="project-wrapper">
-            <img src="/images/placeholder-img.png" class="img-fluid" alt="" />
+          <div class="content-wrapper">
+            <img
+              src="/images/writing-img.png"
+              class="project-image img-fluid"
+              alt=""
+            />
           </div>
         </div>
       </div>
       <div class="row mb-5">
         <div class="col-md-6">
-          <div class="project-wrapper">
+          <div class="content-wrapper">
             <h2 class="mt-5 mb-4" id="contact-section">Contact</h2>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="project-wrapper mt-5">
+          <div class="content-wrapper mt-5">
             <div>
-              <a class="email-link" href="mailto:hannah.v.deakin@gmail.com"
+              <a class="link" href="mailto:hannah.v.deakin@gmail.com"
                 >hannah.v.deakin@gmail.com</a
               >
             </div>
