--- a/info.html
+++ b/info.html
@@ -41,7 +41,7 @@
   <body>
     <nav
       class="navbar sticky-top navbar-expand-lg navbar-light"
-      style="background-color: #f1f1f1"
+      style="background-color: #ff9eea"
     >
       <div class="container-fluid">
         <button
@@ -75,14 +75,14 @@
     <div class="hero">
       <img src="/images/max-logo-white.png" alt="" />
     </div>
-    <small class="information-tab">Information</small>
+    <small class="tab">Information</small>
     <div class="container mt-5">
       <div class="row mb-5">
         <div class="col-md-6">
-          <div class="project-wrapper"></div>
+          <div class="content-wrapper"></div>
         </div>
         <div class="col-md-6">
-          <div class="project-wrapper">
+          <div class="content-wrapper">
             <h1 class="mb-4">Introduction</h1>
             <br />
             <p class="text-muted">
@@ -97,10 +97,10 @@
 
       <div class="row mb-5">
         <div class="col-md-6">
-          <div class="project-wrapper"></div>
+          <div class="content-wrapper"></div>
         </div>
         <div class="col-md-6">
-          <div class="project-wrapper">
+          <div class="content-wrapper">
             <hr class="mb-4" />
           </div>
         </div>
@@ -108,15 +108,18 @@
 
       <div class="row mb-5">
         <div class="col-md-6">
-          <div class="project-wrapper">
+          <div class="content-wrapper">
             <h2 class="mb-5">Experience</h2>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="project-wrapper">
+          <div class="content-wrapper">
             <h4>
               Senior Copywriter, <br />
-              <a class="cv-link" href="https://www.selfridges.com/GB/en/"
+              <a
+                class="link"
+                href="https://www.selfridges.com/GB/en/"
+                target="_blank"
                 >Selfridges</a
               >
             </h4>
@@ -124,7 +127,10 @@
             <br />
             <h4>
               Digital Copywriter, <br />
-              <a class="cv-link" href="https://www.selfridges.com/GB/en/"
+              <a
+                class="link"
+                href="https://www.selfridges.com/GB/en/"
+                target="_blank"
                 >Selfridges</a
               >
             </h4>
@@ -132,7 +138,10 @@
             <br />
             <h4>
               Junior Copywriter, <br />
-              <a class="cv-link" href="https://www.selfridges.com/GB/en/"
+              <a
+                class="link"
+                href="https://www.selfridges.com/GB/en/"
+                target="_blank"
                 >Selfridges</a
               >
             </h4>
@@ -140,7 +149,7 @@
             <br />
             <h4>
               Travel Writer, <br />
-              <a class="cv-link" href="https://suitcasemag.com/"
+              <a class="link" href="https://suitcasemag.com/" target="_blank"
                 >SUITCASE Magazine</a
               >
             </h4>
@@ -148,7 +157,10 @@
             <br />
             <h4>
               Contributing Writer, <br />
-              <a class="cv-link" href="https://www.coeval-magazine.com/"
+              <a
+                class="link"
+                href="https://www.coeval-magazine.com/"
+                target="_blank"
                 >Coeval Magazine</a
               >
             </h4>
@@ -156,13 +168,15 @@
             <br />
             <h4>
               Content Writer, <br />
-              <a class="cv-link" href="https://everpress.com/">Everpress</a>
+              <a class="link" href="https://everpress.com/" target="_blank"
+                >Everpress</a
+              >
             </h4>
             <p class="text-muted">London, UK<br />Aug 2018</p>
             <br />
             <h4>
               Fashion Journalism Intern, <br />
-              <a class="cv-link" href="https://www.fleetilya.com/"
+              <a class="link" href="https://www.fleetilya.com/" target="_blank"
                 >Fleet Ilya</a
               >
             </h4>
@@ -172,12 +186,12 @@
       </div>
       <div class="row mb-5">
         <div class="col-md-6">
-          <div class="project-wrapper">
+          <div class="content-wrapper">
             <h2 class="mb-5">Education</h2>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="project-wrapper">
+          <div class="content-wrapper">
             <h4>BA (Hons) Illustration, <br />2:1</h4>
             <p class="text-muted">University of Brighton, Brighton, UK</p>
             <br />
@@ -199,16 +213,30 @@
 
       <div class="row mb-5">
         <div class="col-md-6">
-          <div class="project-wrapper">
+          <div class="content-wrapper">
             <h2 class="mb-5">Certifications</h2>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="project-wrapper">
-            <h4>SheCodes Basics</h4>
+          <div class="content-wrapper">
+            <h4>
+              <a
+                class="link"
+                href="https://www.shecodes.io/certificates/8ec096d97069221bd2dde2378c0773bb"
+                target="_blank"
+                >SheCodes Basics</a
+              >
+            </h4>
             <p class="text-muted">HTML, CSS, JavaScript, VS Editor</p>
             <br />
-            <h4>SheCodes Plus</h4>
+            <h4>
+              <a
+                class="link"
+                href="https://www.shecodes.io/certificates/53096f3525d01dbc81a108732903b618"
+                target="_blank"
+                >SheCodes Plus</a
+              >
+            </h4>
             <p class="text-muted">
               HTML, CSS, JavaScript, VS Editor, API, Git/Github, Bootstrap,
               Hosting
@@ -231,10 +259,10 @@
 
       <div class="row mb-5">
         <div class="col-md-6">
-          <div class="project-wrapper"></div>
+          <div class="content-wrapper"></div>
         </div>
         <div class="col-md-6">
-          <div class="project-wrapper">
+          <div class="content-wrapper">
             <hr class="mb-4" />
           </div>
         </div>
@@ -242,14 +270,14 @@
 
       <div class="row mb-5">
         <div class="col-md-6">
-          <div class="project-wrapper"></div>
+          <div class="content-wrapper"></div>
         </div>
         <div class="col-md-6">
-          <div class="project-wrapper">
+          <div class="content-wrapper">
             <h2 class="mb-4" id="contact-section">Get in touch</h2>
             <br />
             <div>
-              <a class="email-link" href="mailto:hannah.v.deakin@gmail.com"
+              <a class="link" href="mailto:hannah.v.deakin@gmail.com"
                 >hannah.v.deakin@gmail.com</a
               >
             </div>
